--- a/symfony-project/templates/offre/detail.html.twig
+++ b/symfony-project/templates/offre/detail.html.twig
@@ -4,89 +4,90 @@
 
 {% block body %}
 
-	<div class="site-section bg-light d-flex">
-		<div class="container">
-			<div
-				class="container">
-				<!-- Titre principal -->
-				<div class="mb-4">
-					<h2 class="font-weight-bold">{{ fiche.titre }}</h2>
-				</div>
+    <div class="site-section bg-light d-flex">
+        <div class="container">
+            <div
+                class="container">
+                <!-- Titre principal -->
+                <div class="mb-4">
+                    <h2 class="font-weight-bold">{{ fiche.titre }}</h2>
+                    <p class="text-muted">Publiée le {{ fiche.createdAt|date('d/m/Y H:i') }}</p>
+                </div>
 
-				<!-- Informations principales -->
-				<div class="d-flex align-items-center mt-3 gap-4">
-				
-					<div>
-						<i class="bi bi-geo-alt mt-5" style="color: black; padding: 5px; font-size: 1.5rem;"></i>
-						<span class="ms-2" style="color: black; font-weight: 500;">{{ fiche.localisation }}</span>
-					</div>
-				</div>
+                <!-- Informations principales -->
+                <div class="d-flex align-items-center mt-3 gap-4">
+                
+                    <div>
+                        <i class="bi bi-geo-alt mt-5" style="color: black; padding: 5px; font-size: 1.5rem;"></i>
+                        <span class="ms-2" style="color: black; font-weight: 500;">{{ fiche.localisation }}</span>
+                    </div>
+                </div>
 
 
-				<!-- Entreprise -->
-				<div class="d-flex align-items-center mb-3 p-2">
-					<div class="me-3 mr-3">
-						<img src="https://via.placeholder.com/100" alt="Logo de l'entreprise" class="rounded-circle">
-					</div>
-					<div>
-						<h5 class="mb-1 fw-bold">{{ company.nom }}</h5>
-					</div>
-				</div>
+                <!-- Entreprise -->
+                <div class="d-flex align-items-center mb-3 p-2">
+                    <div class="me-3 mr-3">
+                        <img src="https://upload.wikimedia.org/wikipedia/fr/thumb/b/b5/Capgemini_Logo.svg/120px-Capgemini_Logo.svg.png?20190416190508 alt=alt="Offre Image" class="card-">
+                    </div>
+                    <div>
+                        <h5 class="mb-1 fw-bold">Capgemini</h5>
+                    </div>
+                </div>
 
-				<!-- Date de publication -->
-				<p class="text-muted">Publiée le {{ fiche.createdAt|date('d/m/Y H:i') }}</p>
+                <!-- Date de publication -->
+                <p>{{ fiche.views }} vues pour cette offre </p>
 
-				<!-- Boutons -->
-				<div class="d-flex align-items-center mb-4 space-x-3">
-					<a href="{{ path('app_success') }}" class="btn btn-primary mr-4" style="border-radius: 1.3rem;">
-						<i class="bi bi-lightning-fill"></i>
-						Candidature simplifiée
-					</a>
-					<button class="btn btn-outline-secondary" style="border: 2px solid #000; border-radius: 5px;" id="favoriteBtn">
-						<i class="bi bi-heart" id="heartIcon" style="color: black; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);"></i>
-					</button>
+                <!-- Boutons -->
+                <div class="d-flex align-items-center mb-4 space-x-3">
+                    <a href="{{ path('app_success') }}" class="btn btn-primary mr-4" style="border-radius: 1.3rem;">
+                        <i class="bi bi-lightning-fill"></i>
+                        Candidature simplifiée
+                    </a>
+                    <button class="btn btn-outline-secondary" style="border: 2px solid #000; border-radius: 5px;" id="favoriteBtn">
+                        <i class="bi bi-heart" id="heartIcon" style="color: black; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);"></i>
+                    </button>
 
-					<script>
-						document.getElementById('favoriteBtn').addEventListener('click', function () {
+                    <script>
+                        document.getElementById('favoriteBtn').addEventListener('click', function () {
 var icon = document.getElementById('heartIcon');
 icon.classList.toggle('bi-heart-fill');
 icon.classList.toggle('bi-heart');
 });
-					</script>
+                    </script>
 
-				</div>
+                </div>
 
 
-				<!-- Informations complémentaires -->
-				<div class="text-white p-4 mb-7 " style="border-radius: 1.3rem; background-color: #081c37;">
-					<table class="table text-white mb-0" style="border-collapse: collapse; width: 100%;">
-						<tr>
-							<td style="border-right: 1px solid white; border-top: none; width: 30%;">
-								<p class="mb-1">Niveau d'expérience</p>
-								<h6 class="font-weight-bold">{{ fiche.niveauExperience }} ans</h6>
-							</td>
-							<td style="border-right: 1px solid white; border-top: none;">
-								<p class="mb-1">Technologies</p>
-								<h6 class="font-weight-bold">{{ fiche.technologies }}</h6>
-							</td>
-							<td style="border-top: none; width: 30%;">
-								<p class="mb-1">Salaire proposé</p>
-								<h6 class="font-weight-bold">{{ fiche.salairePropose }} € / an</h6>
-							</td>
-						</tr>
-					</table>
-				</div>
+                <!-- Informations complémentaires -->
+                <div class="text-white p-4 mb-7 " style="border-radius: 1.3rem; background-color: #081c37;">
+                    <table class="table text-white mb-0" style="border-collapse: collapse; width: 100%;">
+                        <tr>
+                            <td style="border-right: 1px solid white; border-top: none; width: 30%;">
+                                <p class="mb-1">Niveau d'expérience</p>
+                                <h6 class="font-weight-bold">{{ fiche.niveauExperience }} ans</h6>
+                            </td>
+                            <td style="border-right: 1px solid white; border-top: none;">
+                                <p class="mb-1">Technologies</p>
+                                <h6 class="font-weight-bold">{{ fiche.technologies }}</h6>
+                            </td>
+                            <td style="border-top: none; width: 30%;">
+                                <p class="mb-1">Salaire proposé</p>
+                                <h6 class="font-weight-bold">{{ fiche.salairePropose }} € / an</h6>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
 
-			</div>
-			<!-- Description -->
-				<div class="container" style="margin-top: 40px;">
-					<div class="card-body shadow-lg text-black" style="border-radius: 5px; border: none{# 2px solid #081c37 #}; text-align: justify;">
-						<p>{{ fiche.description }}</p>
-						<!-- Ajoute d'autres détails ici si nécessaire -->
-					</div>
-				</div>
+            </div>
+            <!-- Description -->
+                <div class="container" style="margin-top: 40px;">
+                    <div class="card-body shadow-lg text-black" style="border-radius: 5px; border: none{# 2px solid #081c37 #}; text-align: justify;">
+                        <p>{{ fiche.description }}</p>
+                        <!-- Ajoute d'autres détails ici si nécessaire -->
+                    </div>
+                </div>
 
-		</div>
-	</div>
+        </div>
+    </div>
 
 {% endblock %}
