--- a/symfony-project/templates/base.html.twig
+++ b/symfony-project/templates/base.html.twig
@@ -85,7 +85,7 @@
 													Favoris</a>
 											</li>
 											<li>
-												<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_company_login') }}">
+												<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_home') }}">
 													<i class="bi bi-box-arrow-right"></i>
 													Déconnexion
 												</a>
