--- a/symfony-project/templates/navbarDev.html.twig
+++ b/symfony-project/templates/navbarDev.html.twig
@@ -108,7 +108,7 @@
 											
 										</li>
 										<li>
-											<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_developer_login') }}">
+											<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_home') }}">
 												<i class="bi bi-box-arrow-right"></i>
 												Déconnexion
 											</a>
